--- a/css/styles.css
+++ b/css/styles.css
@@ -105,6 +105,9 @@ nav ul li a:hover{
     color:#ffeb3b;
     padding-top:50px;
   }
+   #side-menu-div ul li a:hover{
+    text-decoration: line-through;
+   }
   #side-menu-div i{
     padding:8px 16px; 
   }
@@ -133,6 +136,7 @@ nav ul li a:hover{
   width:100%;
   background-attachment: scroll;
   background:linear-gradient(rgb(4, 4, 3),rgba(30, 17, 17, 0)),url(../images/hotel.jpeg);
+  transition: .5s;
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
@@ -148,20 +152,23 @@ color:#FFEB3B;
 width:50%;
 text-align: center;
 margin: 22.5%;
+
 }
 
 
 #showcase h1:hover{
+  animation-name: animate;
   background-image: url(../images/large.png);
+  transition: 0.9s;
   z-index: 1;
   background-size: 400px 250px;
   position: absolute;
   background-position: center;
   background-repeat: no-repeat;
+
 }
 
-
-/*------------------------about------------------------------*/
+/*------------------------ABOUT-------------------------*/
 
 #about {
 
@@ -171,7 +178,7 @@ width:100%;
 height: 100vh;
 background-color:#20303c; 
 border-left:1px soild #F0E68C;
-text-align:right;
+text-align:justify;
 }
 
 
@@ -184,32 +191,137 @@ text-align:right;
   margin:0 auto;
 
 }
+#about p:before {
+
+    content: '';
+    height: 50%;
+    background-color: #f0e68c0f;
+    position: absolute;
+    padding: 80px;
+    margin-top: 65px;
+    transform: translate(30px, -50%);
+}
+
 
 #about p {
   line-height: 1.5;
 }
+#about p::first-letter {
+  font-size: 1.5em;
+}
 
 #about h3 {
+  text-transform: uppercase;
   text-align: center;
   padding: 30px;
 }
 
-
 #about h3::after {
   position:absolute; 
-  content: '';
+  content:'';
   margin-top: 40px;
-  margin-left:-100px;
+  margin-left:-118px;
   width:98px;
-  border-bottom: 1px dotted #F0E68C;
+  border-bottom: 2px dotted #F0E68C;
 }
 
 @media screen and (max-width: 900px) {
 
 #about p {
+
     font-size: 1.2em;
     text-align: justify;
-      line-height: 1.3;
+    line-height: 1.3;
+  }
+
+}
+@media screen and (max-width: 600px) {
+  #about p {
+
+    font-size: 1.5em;
+    text-align: justify;
+    line-height: 1.5;
+  }
+
 }
 
+@media screen and (max-width: 500px) 
+{
+
+#about {
+      position: absolute;
+      top:100vh;
+      width:100%;
+      height: 80vh;
+      background-color:#20303c; 
+      border-left:1px soild #F0E68C;
+      text-align:justify;
+}
+
+
+  #about p {
+
+    font-size: 1em;
+    text-align: justify;
+    line-height: 1.3;
+    padding:0;
   }
+
+
+}
+/*------------------------MENU-------------------------*/
+#menu {
+position: absolute;
+top:200vh;
+width:100%;
+height: 100vh;
+}
+#menu h3 {
+  text-align:center;
+  font-size: 3em;
+}
+#menu .grid-container {
+  display: grid;
+  grid-template-columns: 30% 30% 30%;
+  grid-gap: 3%;
+  padding: 10px;
+}
+
+#menu .grid-container .grid-item {
+
+  padding: 10px;
+  text-align: center;
+}
+#menu .grid-container .grid-item img {
+  width:100%;
+  height:300px;
+
+}
+#menu .grid-container .grid-item h1 {
+  position: relative;
+  font-family:almoni-dl-aaa-300,sans-serif;
+  top:-45%;
+  z-index:1;
+  text-transform: uppercase;
+  color: #e91e63;
+  font-size: 4.5em;
+  opacity: 1;
+
+}
+
+@media screen and (max-width: 900px) {
+
+#menu .grid-container {
+  display: grid;
+  grid-template-columns: auto auto ;
+  }
+
+}
+@media screen and (max-width: 700px) {
+
+#menu .grid-container {
+  display: grid;
+  grid-template-columns: auto  ;
+  }
+
+}
