--- a/css/styles.css
+++ b/css/styles.css
@@ -84,7 +84,6 @@ nav ul li a:hover{
     background-color:#ffeb3b96;
     padding-top:-40px;
     color:#ffeb3b;
-    background-color: ;
     height: 80vh;
  }
   #side-menu-div ul li {
@@ -240,13 +239,12 @@ text-align:justify;
 
     font-size: 1.5em;
     text-align: justify;
-    line-height: 1.5;
+    line-height: .8;
   }
 
 }
 
-@media screen and (max-width: 500px) 
-{
+@media screen and (max-width: 500px) {
 
 #about {
       position: absolute;
@@ -258,12 +256,33 @@ text-align:justify;
       text-align:justify;
 }
 
-
   #about p {
 
     font-size: 1em;
     text-align: justify;
     line-height: 1.3;
+    padding:0;
+  }
+}
+@media screen and (max-width: 350px) {
+
+#about {
+      position: absolute;
+      top:100vh;
+      width:100%;
+      height: 80vh;
+      background-color:#20303c; 
+      border-left:1px soild #F0E68C;
+      text-align:justify;
+}
+#about h3 {
+  font-size:1em;
+}
+
+  #about p {
+
+    font-size: 0.8em;
+    line-height: 1.8;
     padding:0;
   }
 
@@ -300,12 +319,13 @@ height: 100vh;
 #menu .grid-container .grid-item h1 {
   position: relative;
   font-family:almoni-dl-aaa-300,sans-serif;
-  top:-45%;
   z-index:1;
   text-transform: uppercase;
   color: #e91e63;
   font-size: 4.5em;
   opacity: 1;
+   top:-45%;
+   height:auto;
 
 }
 
@@ -318,10 +338,17 @@ height: 100vh;
 
 }
 @media screen and (max-width: 700px) {
+  #menu {
+    position: absolute;
+    top:200vh;
+    width:100%;
+    height: 50vh;
+    }
 
-#menu .grid-container {
+
+   #menu .grid-container {
   display: grid;
-  grid-template-columns: auto  ;
+  grid-template-columns: auto;
   }
 
 }
